--- a/src/App.css
+++ b/src/App.css
@@ -28,3 +28,10 @@
 div {
   color: #1a1e25;
 }
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  /* display: none; <- Crashes Chrome on hover */
+  -webkit-appearance: none;
+  margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
